fix: Always show vertical scrollbar

--- a/web/assets/styles.css
+++ b/web/assets/styles.css
@@ -147,7 +147,8 @@ body {
     height: 100%;
     width: 100%;
     margin: auto;
-    padding: 8% 2rem
+    padding: 8% 2rem;
+    overflow-y: scroll; /* Show vertical scrollbar */
 }
 
 a {
